<resources>
    <string name="app_name">AirlinesDetails</string>
    <string name="airlines_title">Airlines</string>
    <string name="airline_title">Airline</string>
    <string name="search_edit_text_hint">Search by airline name</string>
    <string name="content_desc_add_airline">add airline</string>
    <string name="content_desc_search">search</string>
    <string name="content_desc_view_details">view details</string>
    <string name="content_desc_error_image">error image</string>
    <string name="general_error">Sorry!! something went wrong</string>
    <string name="slow_connection_error">OOPS!! you have a slow connection</string>
    <string name="network_error">OOPS!! network failing</string>
    <string name="try_again">try again</string>
    <string name="can_t_find_what_you_search">Can\'t find what you search</string>
    <string name="go_back">go back</string>
    <string name="add_new_air_line">Add new air line</string>
    <string name="air_line_name_hint">Air line name</string>
    <string name="slogan_hint">Slogan</string>
    <string name="country_hint">Country</string>
    <string name="headquarters_hint">Headquarters</string>
    <string name="established_year_hint">Established year</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="headquarters_title">Headquarters</string>
    <string name="visit_button">Visit</string>
    <string name="network_lost">Network Lost</string>
    <string name="network_retrieve">Network Retrieved</string>
</resources>