<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main_view.airline_searching.SearchFragment">

        <include
            android:id="@+id/airline_view"
            layout="@layout/airline_view_item"
            android:visibility="gone" />

        <include
            android:id="@+id/loading_view_container"
            layout="@layout/loading" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/no_data_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/no_data_image_view"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@string/general_error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39"
                app:srcCompat="@drawable/ic_general_error" />

            <TextView
                android:id="@+id/no_data_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vodafone_rg"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/general_error"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_data_image_view" />

            <android.widget.Button
                android:id="@+id/go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/search_button_background"
                android:text="@string/go_back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/no_data_text_view" />

            <android.widget.Button
                android:id="@+id/try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="68dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/try_again"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/no_data_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>