<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ahmed.airlinesdetails.main_view.airlines_listing.AirlineListingViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main_view.airlines_listing.AirlinesListFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_background">

                <LinearLayout
                    android:id="@+id/search_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/search_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/search_edittext_background"
                        android:fontFamily="@font/vodafone_rg"
                        android:hint="@string/search_edit_text_hint"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:paddingStart="20dp"
                        android:paddingTop="14dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="14dp"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/search_button"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/search_button_background"
                        android:contentDescription="@string/content_desc_search"
                        app:srcCompat="@drawable/ic_search" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/airlines_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="20dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_view_container"
                    tools:listitem="@layout/airline_view_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_airline_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="20dp"
                android:contentDescription="@string/content_desc_add_airline"
                app:elevation="10dp"
                app:fabCustomSize="64dp"
                app:srcCompat="@drawable/ic_plus"
                app:tint="@color/white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <include
            android:id="@+id/loading_view_container"
            layout="@layout/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/error_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/no_data_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/general_error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.306"
                app:srcCompat="@drawable/ic_general_error" />

            <TextView
                android:id="@+id/no_data_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vodafone_rg"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/general_error"
                android:textColor="@color/red"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_data_image_view" />

            <android.widget.Button
                android:id="@+id/try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/search_button_background"
                android:text="@string/try_again"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/no_data_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>